src/styles/lx-loaders.css
.lx-loader {
  width: var(--loader-width-l);
  height: var(--loader-height-l);
}

.lx-loader-small .lx-loader {
  width: var(--loader-width-s);
  height: var(--loader-height-s);
}

.lx-loader circle {
  stroke-width: var(--loader-active-width-l);
}

.lx-loader-small .lx-loader circle {
  stroke-width: var(--loader-active-width-s);
}

.lx-loader-default.lx-loader-small {
  flex-direction: row;
  column-gap: var(--loader-column-gap);
}

.lx-loader-wrapper .lx-loader-bar {
  align-items: flex-start;
}

.lx-loader-bar-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: var(--loader-bar-indicator-height);
}

.lx-loader-bar-indeterminate {
  border-radius: var(--loader-bar-border-radius-l);
}

.lx-loader-small.lx-loader-bar-indeterminate {
  border-radius: var(--loader-bar-border-radius-s);
}

.lx-loader-progress,
.lx-loader-indeterminate {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: var(--loader-row-gap);
}

.lx-loader-indeterminate svg circle {
  stroke-dasharray: 276.4608 276.4608;
  stroke-dashoffset: 52.52755;
}

.lx-loader-wrapper svg {
  fill: transparent;
}

.lx-loader-progress .lx-loader > svg {
  line-height: normal;
  transform: rotate(-90deg);
}

/*** Active styles ***/

.lx-loader-active {
  stroke: var(--color-loader-active); /* For default loader */
  background: var(--color-loader-active); /* For bar loader */
  stroke-linecap: var(--loader-active-cap);
  height: var(--loader-bar-height-l);
}

.lx-loader-small .lx-loader-active {
  height: var(--loader-bar-height-s);
}

.lx-loader-bar .lx-loader-active {
  content: "";
  height: 100%;
  width: 100%;
  transform-origin: 0% 50%;
  border-radius: var(--loader-bar-border-radius-l);
}

.lx-loader-bar.lx-loader-small .lx-loader-active {
  border-radius: var(--loader-bar-border-radius-s);
}

.lx-loader-progress.lx-loader-state-error .lx-loader-active {
  --color-loader-active: var(--color-bad);
}

.lx-loader-progress.lx-loader-state-success .lx-loader-active {
  --color-loader-active: var(--color-good);
}

.lx-loader-indeterminate .lx-loader-active {
  stroke-dashoffset: 52.52755;
}

.lx-loader-indeterminate.lx-loader-small .lx-loader-active {
  stroke-dashoffset: 143.75962;
}

/*** Track styles ***/

.lx-loader-bar-track {
  position: relative;
  min-width: var(--loader-bar-min-width);
  background: var(--color-loader-track);
  height: var(--loader-bar-height-l);
  border-radius: var(--loader-bar-border-radius-l);
  width: 100%;
  overflow: hidden;
}

.lx-loader-small .lx-loader-bar-track {
  height: var(--loader-bar-height-s);
  border-radius: var(--loader-bar-border-radius-s);
}

.lx-loader-wrapper .lx-loader-track {
  stroke: var(--color-loader-track);
}

.lx-loader-indeterminate .lx-loader-track {
  stroke-dashoffset: -22;
}

/*** Stop indicator styles ***/

.lx-loader-progress .lx-loader-bar-track::after {
  position: absolute;
  content: "";
  transform: translate(0%, -50%);
  top: 50%;
  right: var(--loader-bar-stop-indicator-margin-right-l);
  height: var(--loader-bar-stop-indicator-height-l);
  width: var(--loader-bar-stop-indicator-width-l);
  background: var(--color-loader-bar-stop-indicator);
  border-radius: var(--loader-bar-border-radius-l);
}

.lx-loader-progress.lx-loader-small .lx-loader-bar-track::after {
  right: var(--loader-bar-stop-indicator-margin-right-s);
  height: var(--loader-bar-stop-indicator-height-s);
  width: var(--loader-bar-stop-indicator-width-s);
  border-radius: var(--loader-bar-border-radius-s);
}

.lx-loader-progress .state-success .lx-loader-bar-track::after {
  --color-loader-bar-stop-indicator: var(--color-good);
}

.lx-loader-progress .state-error .lx-loader-bar-track::after {
  --color-loader-bar-stop-indicator: var(--color-bad);
}

/*** State styles***/

.lx-loader-state {
  width: var(--loader-state-indicator-width-l);
  height: var(--loader-state-indicator-height-l);
  margin: var(--loader-state-indicator-margin-l);
}

.lx-loader-small .lx-loader-state {
  width: var(--loader-state-indicator-width-s);
  height: var(--loader-state-indicator-height-s);
  margin: var(--loader-state-indicator-margin-s);
}

.lx-loader-wrapper .lx-success-icon {
  fill: var(--color-good);
}

.lx-loader-bar-state {
  width: var(--loader-bar-indicator-width);
  height: var(--loader-bar-indicator-height);
}

/*** Text styles ***/

.lx-loader-data {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--loader-text-gap);
}

.lx-loader-wrapper .lx-primary {
  color: var(--color-loader-text-primary);
  font-size: var(--loader-text-primary-font-size);
  font-weight: var(--loader-text-primary-font-weight);
  line-height: var(--loader-text-primary-line-height);
}

.lx-loader-wrapper .lx-secondary {
  color: var(--color-loader-text-secondary);
  font-size: var(--loader-text-secondary-font-size);
  font-weight: var(--loader-text-secondary-font-weight);
  line-height: var(--loader-text-secondary-line-height);
}

/*** Mystery styles ***/

.lx-loading-screen {
  width: 100%;
  height: calc(16 * var(--row-size));
  display: flex;
  justify-content: center;
  align-items: center;
}

.lx-loading-screen.lx-loading-infinite-list {
  height: calc(3 * var(--row-size));
}

